prevent 300ms click delay on mobile devices, close #3

--- a/src/mantis-equalizr.styl
+++ b/src/mantis-equalizr.styl
@@ -49,6 +49,7 @@ input[type=reset],
 input[type=submit]
 	color inherit
 	cursor pointer
+	touch-action manipulation
 
 input[type=search]
 	appearance textfield
